--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "node-canvas-with-twemoji-and-discord-emoji",
+  "name": "canvas-twemoji-discord",
   "version": "1.1.4",
   "description": "A fork of node-canvas-with-twemoji with Discord emoji support.",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "flazepe",
+  "author": "PedroKarim64",
   "dependencies": {
     "canvas": "^2.6.1",
     "twemoji": "^12.1.5"
   },
   "license": "MIT",
   "repository": {
-	"type": "git",
-	"url": "https://github.com/flazepe/node-canvas-with-twemoji-and-discord-emoji.git"
+    "type": "git",
+    "url": "https://github.com/AliasPedroKarim/canvas-twemoji-discord.git"
   }
 }
